[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "obfuscator"
version = "0.1.0"
description = "Neural Network obuscator"
authors = ["Thomaub <github.thomaub@gmail.com>"]
readme = "README.md"
documentation = ""
license = "LICENSE.md"

[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.5.3"
numpy = "^1.20.1"
onnx = "^1.8.1"
onnxruntime = "^1.6.0"
torch = "^1.8"
torchvision = "^0.9"
scipy = "^1.6.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylama = "^7.7.1"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
pytest-mypy = "^0.8.0"
isort = "^5.7.0"

[tool.poetry.scripts]
obfuscator = 'obuscator.main:main'

[tool.black]
exclude = '''
/(
\.git
| \.mypy_cache
| \.tox
| \.venv
| \.pytest_cache
| __pycache__
)/
'''
line-length = 120

[tool.isort]
profile = "black"
